update all the codes

--- a/assets/css/sytle.css
+++ b/assets/css/sytle.css
@@ -198,4 +198,16 @@ img:hover {
 img:active {
     background: red
   }
-  
+
+
+@media screen and (max-width:768px) {
+h1 {
+    font-size: 70px;
+}
+h2 {
+    font-size: 95%
+}
+.card {
+    max-width: 80%
+  }
+}
